--- a/_posts/托福词汇 01.md
+++ b/_posts/托福词汇 01.md
@@ -1,3 +1,13 @@
+---
+layout: post
+title: 托福词汇 01
+date: 2019-06-08
+Author: 秋羊
+categories: 
+tags: [Note, English, Learning, Toefl]
+comments: true
+--- 
+
 # 托福词汇 01
 
 ## 记忆单词的方法
