--- a/_posts/发哨子的人.md
+++ b/_posts/发哨子的人.md
@@ -13,7 +13,7 @@ comments: true
 
 # 发哨子的人
 
-![img](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/834274d4-eb9b-486e-8f77-e736f7d8a416/0?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=ASIAT73L2G45NLDBG5EA%2F20200311%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20200311T092716Z&X-Amz-Expires=86400&X-Amz-Security-Token=IQoJb3JpZ2luX2VjECkaCXVzLXdlc3QtMiJIMEYCIQC1dnSc9b2S%2BzyH4zE88RTgcgN52E%2F5XNIeL5lR9PjSoQIhAPBtnr5WhaWCafkDrjNulhmAeZWvMxfffp%2BR6Z3FmF4gKrQDCBIQABoMMjc0NTY3MTQ5MzcwIgwAkxPtGlN3%2FGKFI%2FAqkQPzHf5SGgPFzy8qj7s8eh0xqpdTDoMLmPl7saLwKntiF2ireNY5319liU4OgWv%2BxJ14mzBbxzBFrLxfTodG1v6NO4obiox7yfwJg8blZzcyl9mRkY1VOJ%2BfXumxDX0BgobvA4HI%2BepJdQPO0AKjE4%2BFNmeuUOjfZ92H54PuqUgsjriDtda7E8SRGSN7VCF%2BeLqpV88qwxhIBxeCJTFMiYbpU6Vbb%2BHCOfWTXqV2VP1jlEFwUyf7Af4lUWLRsTq2ZymSEDXDbgPgQOVaxHexs8ThgDcd2cputizSn1lZxECcbJNXhKahQT0WnIB4mI1MXx36pu1IyOg9GI3%2FZMwm277S96efALNWPF%2F8AhKlzvjdKPK%2BMhvBtK4LmCaliFJhS52jijZXNOapaYCkNxigRJTmsI9LH289AQh42yITxoxDxGDY7dP9cJBKITnjJUxpqKoM%2Ff4lfDCMdtTKAfkyn2ocFZ96oY3dv8DS6VrvVUVItdYXBOEWb8syyZch6wTx7ldmg07%2FvUynENKl1XwJTgCJxTCYxKLzBTrqAaQybF58ar4Q5VMdIRqesRseZkyLDZ0QVCr6Uk2%2BA5YgJ%2BhvxbjP2IObTPjglZrquNRRA1cyA5TsXmhvipdP349Gy%2FXw%2FCo7DuWlYSU%2F%2BYHZpixxjfLPUnWhCHXcthooVM6OJHnRqG5O77AHzKeAWHk2z93iMMmoj36X8X%2Bk%2B%2FsZU2%2BtisH%2BbDxncTJ%2BmO%2FzEaonImIQ%2F4MqggmKb%2FPYbaJSHMIxNGcMTSh1kZH9D8CwRAG0uVHV3UmjhgiI6qetpje%2Fit7avwUDTKHNOgQ%2FmDiTgK5bfvEGblB4NmfWgoy0Ejai8Ci1WiWKgw%3D%3D&X-Amz-Signature=e79b66f2cb7b5541c4d5ed520b6b0af344ae27bbf9d2a66b6282afa4ca11e1b5&X-Amz-SignedHeaders=host)
+![0.jpg](https://i.loli.net/2020/03/11/5lTk18O3IcqvjLs.jpg)
 
 2019年12月30日，艾芬曾拿到过一份不明肺炎病人的病毒检测报告，她用红色圈出「SARS冠状病毒」字样，当大学同学问起时，她将这份报告拍下来传给了这位同是医生的同学。当晚，这份报告传遍了武汉的医生圈，转发这份报告的人就包括那8位被警方训诫的医生。
 
